--- a/SampleApp/_Imports.razor
+++ b/SampleApp/_Imports.razor
@@ -13,3 +13,4 @@
 
 @inject IncidentService incidentService
 @inject InvestigatingOfficerService investigatingOfficerService
+@inject IJSRuntime javaScript
