--- a/SampleApp/Pages/Index.razor
+++ b/SampleApp/Pages/Index.razor
@@ -1,15 +1,12 @@
-﻿@page "/"
-<div>
+﻿@page "/" 
+<PageTitle>Incidents - Home</PageTitle>
+<h3>Incidents </h3><hr>
+
 	 <EditForm Model="Model" OnValidSubmit="@Process" class="row col-lg-4 pull-right">
-
-        <h3>Incidents </h3>
-        <hr>
-        <div class="inline">
-	    <div class="col-md-4">
-                <label for="officer">
-                    Officer
-                </label>
-
+		<DataAnnotationsValidator/>
+		<div class="inline-content">
+      	    <div class="col-md-4">
+                <label for="officer">Officer</label>
                 <InputSelect TValue= "int" id="officer" @bind-Value="@Model.InvestigatingOfficerId" class="form-control">
                     @foreach (var officer in officers)
                     {
@@ -18,59 +15,44 @@
                 </InputSelect>
             </div>
             <div class="col-md-4">
-                <label for="date">
-                    Date
-                </label>
+               <label for="date">Date</label>
                <InputDate id="date" @bind-Value="@Model.IncidentDate" class="form-control"></InputDate>
             </div>
             <div class="col-md-4">
-                <label for="dep">
-                    Status
-                </label>
+                <label for="status">Status</label>
                 <InputSelect TValue="string" id="status" @bind-Value="@Model.Status" class="form-control">
                         <option value="Open">Open</option>
 			            <option value="Closed">Closed</option>                    
                 </InputSelect>
             </div>
             <div class="col-md-4">
-                <label for="category">
-                    Category
-                </label>
-
+                <label for="category">Category</label>
                 <InputText id="category" @bind-Value="@Model.IncidentCategory" class="form-control"/>             
             </div>
             <div class="col-md-4 ">
-                <label for="loco">
-                    Location
-                </label>
+                <label for="loco">Location</label>
                 <InputText id="loco" @bind-Value="@Model.IncidentLocation" class="form-control"/>
             </div>
             <div class="col-md-4">
-                <label for="findings">
-                    Findings
-                </label>
+               <label for="findings">Findings</label>
                <InputText id="findings" @bind-Value="@Model.InvestigationFindings" class="form-control"/>
             </div>
-	     <div class="col-md-4">
-                <label for="rss">
-                    Resolution
-                </label>
-               <InputText id="rss" @bind-Value="@Model.Resolution" class="form-control"/>
-            </div>
-	    <div class="col-md-4">
-                <label for="datec">
-                    Date Closed
-                </label>
-               <InputDate id="datec" @bind-Value="@Model.DateClosed" class="form-control"></InputDate>
-            </div>
-            <div style="padding-top:2rem;" class="col-lg-4">
+	       <div class="col-md-4"><label for="reso">Resolution</label>
+               <InputText id="reso" @bind-Value="@Model.Resolution" class="form-control"/>
+           </div>
+	      <div class="col-md-4">
+                <label for="datec">Date Closed</label>
+                <InputDate id="datec" @bind-Value="@Model.DateClosed" class="form-control"></InputDate>
+          </div>
+	</div> 
+    <div  class="col-lg-4 pt-4">
+        <button type="submit" class="btn btn-success"><i class="oi oi-file"></i>@buttonText</button>
+    </div>
+ </EditForm>
+ 
 
-                <button type="submit" class="btn btn-success btn-sm"><i class="oi oi-file"></i>Save</button>
-            </div>
-        </div>
-    </EditForm>
-</div>
-<table class="table table-striped table-hover">
+<table class="table table-striped table-bordered table-hover table-responsive-sm mt-4">
+    <caption>List of Incidents</caption>
 <thead>
 	<tr>
 		<th>Date</th>		
@@ -106,10 +88,8 @@
 </tbody>
 </table>
 <style>
-	.input{
-		width:250px;
-	}
-     .inline {
+	
+    .inline-content {
         display: flex;
         justify-content: space-between;
     }
@@ -123,16 +103,12 @@
    List<Incident> tableData { get; set; } = new ();
    List<InvestigatingOfficer> officers {get; set;} = new();
    Incident Model {get; set;} = new();
-
-   
-
-		protected override void OnInitialized()
-		{
-		    LoadData();
-		}
-
-		
-
+   string buttonText;
+   protected override void OnInitialized()
+   {
+		LoadData();
+   }
+	
    void Process()
    {
         if(Model.Id == 0)
@@ -154,6 +130,7 @@
    void LoadData()
    {   
        Model = new();
+       buttonText = " Save";
        tableData = incidentService.GetAll();
        officers = investigatingOfficerService.GetAll();
        StateHasChanged();
@@ -161,11 +138,14 @@
    void ToggleEdit(Incident record)
    {
        Model = record;
+       buttonText = " Update";
    }
-   void ToggleDelete(Incident record)
-   {
+   async void ToggleDelete(Incident record)
+   {  
+      
       if(incidentService.Delete(record))
-      {
+      {   
+          await javaScript.InvokeVoidAsync("alert","The record has been deleted successfully?");
           LoadData();
       }
    }
