--- a/SampleApp/Pages/Index.razor
+++ b/SampleApp/Pages/Index.razor
@@ -101,14 +101,13 @@
 @code {
    
    List<Incident> tableData { get; set; } = new ();
-   List<InvestigatingOfficer> officers {get; set;} = new();
-   Incident Model {get; set;} = new();
+   List<InvestigatingOfficer> officers { get; set; } = new();
+   Incident Model { get; set; } = new ();
    string buttonText;
    protected override void OnInitialized()
    {
 		LoadData();
-   }
-	
+   }	
    void Process()
    {
         if(Model.Id == 0)
@@ -145,9 +144,10 @@
       
       if(incidentService.Delete(record))
       {   
-          await javaScript.InvokeVoidAsync("alert","The record has been deleted successfully?");
-          LoadData();
+          LoadData(); 
+          await javaScript.InvokeVoidAsync("alert","The record has been deleted successfully");
       }
+
    }
    
    
