--- a/SampleApp/Pages/Index.razor
+++ b/SampleApp/Pages/Index.razor
@@ -2,7 +2,7 @@
 <PageTitle>Incidents - Home</PageTitle>
 <h3>Incidents </h3><hr>
 
-	 <EditForm Model="Model" OnValidSubmit="@Process" class="row col-lg-4 pull-right">
+	 <EditForm Model="Model" OnValidSubmit="@Process">
 		<DataAnnotationsValidator/>
 		<div class="inline-content">
       	    <div class="col-md-4">
@@ -48,10 +48,11 @@
     <div  class="col-lg-4 pt-4">
         <button type="submit" class="btn btn-success"><i class="oi oi-file"></i>@buttonText</button>
     </div>
+    <hr/>
  </EditForm>
  
 
-<table class="table table-striped table-bordered table-hover table-responsive-sm mt-4">
+<table class="table table-striped table-bordered table-hover mt-4">
     <caption>List of Incidents</caption>
 <thead>
 	<tr>
